tests/typing/bad/testfile-arity-1.go
package main
func f() { }
func main() { f(1) }
